# ematools

./: .gitignore  README.md  flake.nix  graph.py  setup.cfg
Zettels/: 1.md  3.md  4.md  9.md  Subdirectory.md  index.md  index.yaml
Zettels/Archive/: 5.md
Zettels/Subdirectory/: 6.md  7.md  8.md
src/ematools/: __init__.py
