[metadata]
name = ematools
version = v0.1
author = David Pätzel
author_email = david.paetzel@posteo.de
description = Python scripts that interface with emanote
long_description = file: README.md
long_description_content_type = text/markdown
url = TODO
project_urls =
    Bug Tracker = TODO
classifiers =
    # TODO Check https://pypi.org/classifiers/

[options]
package_dir  =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    # TODO Pin versions
    click
    matplotlib
    networkx
    pydot
    pygraphviz
    requests
    toolz
    tqdm

[options.packages.find]
where = src
